platform/definitions/kubernetes/policies/network-isolation-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: az-local-first-policy
  namespace: black-alder-platform
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: black-alder-platform
  egress:
  - to:
    - podSelector: {}
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: black-alder-platform
